Este es una nueva actualización del sitio web

--- a/pagina/index.html
+++ b/pagina/index.html
@@ -9,6 +9,27 @@
   </head>
   <body>
     <header>
+      <div id="logo">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          class="icon icon-tabler icons-tabler-outline icon-tabler-dental"
+        >
+          <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+          <path
+            d="M12 5.5c-1.074 -.586 -2.583 -1.5 -4 -1.5c-2.1 0 -4 1.247 -4 5c0 4.899 1.056 8.41 2.671 10.537c.573 .756 1.97 .521 2.567 -.236c.398 -.505 .819 -1.439 1.262 -2.801c.292 -.771 .892 -1.504 1.5 -1.5c.602 0 1.21 .737 1.5 1.5c.443 1.362 .864 2.295 1.262 2.8c.597 .759 2 .993 2.567 .237c1.615 -2.127 2.671 -5.637 2.671 -10.537c0 -3.74 -1.908 -5 -4 -5c-1.423 0 -2.92 .911 -4 1.5z"
+          />
+          <path d="M12 5.5l3 1.5" />
+        </svg>
+        <span> Médico Cirujano Dentista</span>
+      </div>
       <nav>
         <a href="#">Inicio</a>
         <a href="#">Plan de estudios</a>
@@ -16,5 +37,87 @@
         <a href="#">Contacto</a>
       </nav>
     </header>
+    <section id="slide">
+      <h1>Bienvenidos a la carrera más innovadora...</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam
+        laboriosam soluta magnam pariatur doloremque, veniam sint deserunt
+        voluptatum sit similique aspernatur fugiat aperiam, architecto dicta
+        facilis ut. Magnam, officia asperiores?
+      </p>
+    </section>
+    <main>
+      <section>
+        <h1>Médico Cirujano Dentista</h1>
+        <img src="images/imagenDentista.jpg" alt="" class="imagen-derecha" />
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla
+          possimus explicabo fuga consequuntur quisquam dicta tempora ut quasi
+          dolore, atque rerum voluptates alias, et tempore dolorem fugit beatae,
+          deserunt similique.
+        </p>
+        <div id="botones">
+          <div class="boton">Plan de estudio</div>
+          <div class="boton">Calendario semestral</div>
+        </div>
+      </section>
+
+      <section id="galeria">
+        <h1>Conoce nuestra instalaciones</h1>
+        <img src="images/galeria1.jpg " alt="" class="foto-galeria" />
+        <img src="images/galeria2.jpg " alt="" class="foto-galeria" />
+        <img src="images/galeria3.jpg " alt="" class="foto-galeria" />
+        <img src="images/galeria4.jpg " alt="" class="foto-galeria" />
+      </section>
+      <section id="contacto">
+        <div class="formulario">
+          <h1>¡Únete a nuestra carrera!</h1>
+          <form>
+            <input type="text" placeholder="Ingresa tu nombre" />
+            <input type="email" placeholder="Ingresa tu correo electrónico" />
+            <textarea></textarea>
+            <button>Enviar datos</button>
+          </form>
+        </div>
+        <div class="mapa">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7446.510723857443!2d-86.84391940000002!3d21.062460700000003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2smx!4v1738366757035!5m2!1ses!2smx"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <p>Todos los derechos reservados © ivanchan</p>
+      <div class="redes-sociales">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="16"
+          height="16"
+          fill="currentColor"
+          class="bi bi-instagram"
+          viewBox="0 0 16 16"
+        >
+          <path
+            d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334"
+          />
+        </svg>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="16"
+          height="16"
+          fill="currentColor"
+          class="bi bi-facebook"
+          viewBox="0 0 16 16"
+        >
+          <path
+            d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"
+          />
+        </svg>
+      </div>
+    </footer>
   </body>
 </html>
