pagina de la carrera actualizada

--- a/pagina/index.html
+++ b/pagina/index.html
@@ -28,9 +28,9 @@
           />
           <path d="M12 5.5l3 1.5" />
         </svg>
-        <span> Médico Cirujano Dentista</span>
+        <span id="NombreCarrera"> Médico Cirujano Dentista</span>
       </div>
-      <nav>
+      <nav id="Menu">
         <a href="#">Inicio</a>
         <a href="#">Plan de estudios</a>
         <a href="#">Galería</a>
@@ -38,12 +38,13 @@
       </nav>
     </header>
     <section id="slide">
-      <h1>Bienvenidos a la carrera más innovadora...</h1>
+      <h1>Bienvenidos a la carrera que genera sonrisas</h1>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam
-        laboriosam soluta magnam pariatur doloremque, veniam sint deserunt
-        voluptatum sit similique aspernatur fugiat aperiam, architecto dicta
-        facilis ut. Magnam, officia asperiores?
+        Bienvenidos a la carrera que transforma sonrisas y cambia vidas. En
+        Médico Cirujano Dentista, no solo aprenderás a cuidar la salud bucal,
+        sino que también serás parte de un futuro lleno de innovación,
+        excelencia y compromiso con el bienestar de las personas. ¡Tu camino
+        hacia una profesión de impacto comienza aquí!
       </p>
     </section>
     <main>
@@ -51,10 +52,9 @@
         <h1>Médico Cirujano Dentista</h1>
         <img src="images/imagenDentista.jpg" alt="" class="imagen-derecha" />
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla
-          possimus explicabo fuga consequuntur quisquam dicta tempora ut quasi
-          dolore, atque rerum voluptates alias, et tempore dolorem fugit beatae,
-          deserunt similique.
+          En la carrera de Médico Cirujano Dentista, aprenderás a diagnosticar,
+          prevenir y tratar enfermedades bucales, rehabilitar sonrisas y mejorar
+          la salud dental, combinando ciencia, tecnología y cuidado humano.
         </p>
         <div id="botones">
           <div class="boton">Plan de estudio</div>
@@ -71,7 +71,7 @@
       </section>
       <section id="contacto">
         <div class="formulario">
-          <h1>¡Únete a nuestra carrera!</h1>
+          <h1>Deja tus datos para más información</h1>
           <form>
             <input type="text" placeholder="Ingresa tu nombre" />
             <input type="email" placeholder="Ingresa tu correo electrónico" />
